update report views and update dist

--- a/templates/shared/header.html
+++ b/templates/shared/header.html
@@ -5,22 +5,22 @@
   <div class="navbar">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" style="color: #fff" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          {% bootstrap_icon 'align-justify' %}
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+        <!--<button type="button" class="navbar-toggle collapsed" style="color: #fff" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">-->
+          <!--{% bootstrap_icon 'align-justify' %}-->
+          <!--<span class="sr-only">Toggle navigation</span>-->
+          <!--<span class="icon-bar"></span>-->
+          <!--<span class="icon-bar"></span>-->
+          <!--<span class="icon-bar"></span>-->
+        <!--</button>-->
         <a href="" class="navbar-brand" style="color: #fff">BL-Repair</a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="{% url 'report_new' %}" style="color: #fff">故障报修</a></li>
-          <li><a href="{% url 'article_index' %}" style="color: #fff">自助维修</a></li>
-          <li><a href="{% url 'report_index' %}" style="color: #fff">报障记录</a></li>
-          <li><a href="{% url 'report_about' %}" style="color: #fff">关于</a></li>
+          <!--<li><a href="{% url 'article_index' %}" style="color: #fff">自助维修</a></li>-->
+          <!--<li><a href="{% url 'report_index' %}" style="color: #fff">报障记录</a></li>-->
+          <!--<li><a href="{% url 'report_about' %}" style="color: #fff">关于</a></li>-->
         </ul>
       </div><!-- /.navbar-collapse -->
 
