--- a/report/templates/report/new.html
+++ b/report/templates/report/new.html
@@ -12,7 +12,9 @@
 
 {% load bootstrap_tags %}
 
-{% if msg %}
+{% if msg and msg_type == 'error' %}
+<h1 style='text-align: center; color: red; font-size: 2.3rem'>{{ msg }}</h1>
+{% elif msg %}
 <h1 style='text-align: center; color: green; font-size: 2.3rem'>{{ msg }}</h1>
 {% endif %}
 
@@ -27,8 +29,8 @@
           {% csrf_token %}
           {{ computer_problem_form | as_bootstrap }}
 
-          <div class="form-actions" style="margin: 0 auto">
-            <button type="submit" class="btn btn-default">提交</button>
+          <div class="form-actions pull-right">
+            <button type="submit" class="btn btn-default" style="width: 80px">提交</button>
           </div>
 
         </form>
